fix heading overlap with logo

--- a/docs/media/css/restdown.css
+++ b/docs/media/css/restdown.css
@@ -141,7 +141,7 @@ pre.shell code::before {
   background: url(../img/logo.png) no-repeat;
   line-height:2.1em;
   padding:0;
-  padding-left:140px;
+  padding-left:260px;
   margin-top:18px;
   margin-left:20px;
   color:white;
